src/objects/CHANNEL_ORDERS__Customer__c.object
<CustomObject>
    <label>Customer</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>CHANNEL_ORDERS__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Annual_Order_Value__c</fullName>
        <label>Annual Order Value (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Account_Id__c</fullName>
        <label>Customer Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Org_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Org ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_State__c</fullName>
        <label>State/Province/Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_ZIP_Postal_Code__c</fullName>
        <label>ZIP/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__ISV_Contract__c</fullName>
        <description>The ISV contracts for this Customer.</description>
        <inlineHelpText>The ISV contracts for this Customer.</inlineHelpText>
        <label>ISV Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Number_of_Orders__c</fullName>
        <label>Number of Orders (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__OEM_Contract__c</fullName>
        <description>The OEM contracts for this Customer.</description>
        <inlineHelpText>The OEM contracts for this Customer.</inlineHelpText>
        <label>OEM Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Renewal_Date__c</fullName>
        <description>For a customer with multiple contracts, this displays the date of the contract with a future date that is closest to today&apos;s date</description>
        <inlineHelpText>For a customer with multiple contracts, this displays the date of the contract with a future date that is closest to today&apos;s date</inlineHelpText>
        <label>Renewal Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Status__c</fullName>
        <formula>IF( ( CHANNEL_ORDERS__Renewal_Date__c - TODAY() ) &lt;=  45  &amp;&amp; ( ( CHANNEL_ORDERS__Renewal_Date__c - TODAY() ) &gt; 0 ),  IMAGE(&quot;/resource/CHANNEL_ORDERS__uilib/images/warning_60_yellow.png&quot;, &quot;warning&quot;, 16, 16) &amp;  &apos; Ends in &apos; &amp; TEXT( CHANNEL_ORDERS__Renewal_Date__c - TODAY()) 
&amp; &apos; Days&apos;,  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>CHANNEL_ORDERS__COA_Customer_View</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Customer_Org_ID__c</columns>
        <columns>CHANNEL_ORDERS__Customer_Company_Name__c</columns>
        <columns>CHANNEL_ORDERS__Customer_City__c</columns>
        <columns>CHANNEL_ORDERS__Customer_State__c</columns>
        <columns>CHANNEL_ORDERS__Customer_ZIP_Postal_Code__c</columns>
        <columns>CHANNEL_ORDERS__Customer_Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>COA Customer View</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Country_2_letter_code</fullName>
        <active>false</active>
        <description>Deprecated</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Country__c</errorDisplayField>
        <errorMessage>(deprecated)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Invalid_OrgID</fullName>
        <active>false</active>
        <description>Deprecated</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Org_ID__c</errorDisplayField>
        <errorMessage>(deprecated)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__OrgID_must_be_alphanumeric</fullName>
        <active>false</active>
        <description>Deprecated</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Org_ID__c</errorDisplayField>
        <errorMessage>(deprecated)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Valid_Canada_State</fullName>
        <active>false</active>
        <description>Deprecated</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_State__c</errorDisplayField>
        <errorMessage>(deprecated)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Valid_US_State</fullName>
        <active>false</active>
        <description>Deprecated</description>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_State__c</errorDisplayField>
        <errorMessage>(deprecated)</errorMessage>
    </validationRules>
</CustomObject>